# SccApp

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  config_def.rs  main.rs  search.rs  search_def.rs  stream_def.rs  webshare.rs  webshare_def.rs
src/lib/: ActorCard.svelte  Checkbox.svelte  LoginPage.svelte  MovieCard.svelte  MovieInfoPage.svelte  PlayerPage.svelte  SearchPage.svelte  scc.ts  scc_def.ts
