[package]
name = "sccapp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23",  features = ["blocking"] }
futures-io = "0.3.30"
sha1 = "0.10.6"
md-5 = "0.10.6"
crypto = "0.4"
pwhash = "1.0.0"
serde-xml-rs = "0.6.0"
toml = "0.8.8"
sha2 = "0.10.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
